Load noscript Matomo lazy and at end of html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 		</script>
 	</head>
 	<body>
-		<noscript><img src="https://dietpi.com/matomo/matomo.php?idsite=1&amp;rec=1" width=0 height=0 style="display:none;border:0;" alt=""></noscript>
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-xl">
 				<img class="scrollup" src="images/logo.png" alt="Logo" loading="lazy">
@@ -1722,5 +1721,6 @@
 		<!-- ScrollUp button start -->
 		<a class="scrollup fa fa-chevron-up" href="#"></a>
 		<!-- ScrollUp button end -->
+		<noscript><img src="https://dietpi.com/matomo/matomo.php?idsite=1&amp;rec=1" width=0 height=0 style="display:none;border:0;" alt="" loading="lazy"></noscript>
 	</body>
 </html>
