--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 						<div class="col-md-6">
 							<div class="project-description">
 								<div class="project-info">
-									<div><span>CPU:</span>Amlogic 1.54 GHz quad-core (ARMv8)</div>
+									<div><span>CPU:</span>Amlogic S905 1.54 GHz | 4 cores | ARMv8</div>
 									<div><span>RAM:</span>2 GiB DDR3</div>
 									<br>
 									<div><a href="downloads/images/DietPi_OdroidC2-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
@@ -1261,6 +1261,87 @@
 					</div>
 				</div>
 				<!-- End details for portfolio project 38 -->
+				<!-- Start details for portfolio project 39 -->
+				<div id="slidingdiv39" class="toggleDiv single-project">
+					<div class="row">
+						<div class="col-md-12 project-title clearfix">
+							<h3>NanoPi NEO3 (beta)</h3>
+							<span class="show_hide close"><i class="fa fa-times"></i></span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="project-description">
+								<div class="project-info">
+									<div><span>CPU:</span>Rockchip RK3328 1.5 GHz | 4 cores | ARMv8</div>
+									<div><span>RAM:</span>1 GiB - 2 GiB DDR4</div>
+									<div><span>NET:</span>Gbit Ethernet</div>
+									<div><span>USB:</span>3.0 Type A</div>
+									<br>
+									<div><a href="downloads/images/testing/DietPi_NanoPiNEO3-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
+									<div><a href="docs/user-guide_install/#how-to-install-dietpi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
+								</div>
+								<p>A tiny headless SBC, comes in a cute white housing with fanless cooling. It has the ROCK64 SoC, so you know what you can expect, but it runs hot quickly inside there. Prepare to limit the maximum CPU frequency, apply a strict GPU governor or put the board into a new cool well ventilated home.</p>
+							</div>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopineo3.jpg" alt="NanoPi NEO3" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- End details for portfolio project 39 -->
+				<!-- Start details for portfolio project 40 -->
+				<div id="slidingdiv40" class="toggleDiv single-project">
+					<div class="row">
+						<div class="col-md-12 project-title clearfix">
+							<h3>NanoPi R2S (beta)</h3>
+							<span class="show_hide close"><i class="fa fa-times"></i></span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="project-description">
+								<div class="project-info">
+									<div><span>CPU:</span>Rockchip RK3328 1.5 GHz | 4 cores | ARMv8</div>
+									<div><span>RAM:</span>1 GiB DDR4</div>
+									<div><span>NET:</span>2x Gbit Ethernet</div>
+									<div><span>USB:</span>2.0 Type A</div>
+									<br>
+									<div><a href="downloads/images/testing/DietPi_NanoPiR2S-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
+									<div><a href="docs/user-guide_install/#how-to-install-dietpi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
+								</div>
+								<p>A headless dual-Ethernet SBC, useful as router setup or network bridge. It has the ROCK64 SoC, so you know what you can expect.</p>
+							</div>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopir2s.jpg" alt="NanoPi R2S" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- End details for portfolio project 40 -->
+				<!-- Start details for portfolio project 41 -->
+				<div id="slidingdiv41" class="toggleDiv single-project">
+					<div class="row">
+						<div class="col-md-12 project-title clearfix">
+							<h3>NanoPi K2</h3>
+							<span class="show_hide close"><i class="fa fa-times"></i></span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="project-description">
+								<div class="project-info">
+									<div><span>CPU:</span>Amlogic S905 1.5 GHz | 4 cores | ARMv8</div>
+									<div><span>RAM:</span>2 GiB DDR3</div>
+									<div><span>NET:</span>Gbit Ethernet, WiFi, Bluetooth</div>
+									<div><span>Storage:</span>eMMC socket</div>
+									<br>
+									<div><a href="downloads/images/DietPi_NanoPiK2-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
+									<div><a href="docs/user-guide_install/#how-to-install-dietpi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
+								</div>
+								<p>A well featured SBC with the SoC that one might know from Odroid C2</p>
+							</div>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopik2.jpg" alt="NanoPi K2" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- End details for portfolio project 41 -->
 				<div id="portfolio-grid" class="row" style="display:none">
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypi">
 						<div class="thumbnail">
@@ -1285,7 +1366,7 @@
 							<img src="images/sbc_images/odroidc2.jpg" alt="Odroid C2" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv3"><i class="fa fa-plus"></i></a>
 							<h3>Odroid C2</h3>
-							<p>S905 1.5GHz | 4 cores | ARMv8</p>
+							<p>S905 1.5 GHz | 4 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -1294,7 +1375,7 @@
 							<img src="images/sbc_images/odroidn1.jpg" alt="Odroid N1" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv11"><i class="fa fa-plus"></i></a>
 							<h3>Odroid N1</h3>
-							<p>RK3399 2GHz | 6 cores | ARMv8</p>
+							<p>RK3399 2 GHz | 6 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -1303,7 +1384,7 @@
 							<img src="images/sbc_images/odroidn2.jpg" alt="Odroid N2" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv14"><i class="fa fa-plus"></i></a>
 							<h3>Odroid N2</h3>
-							<p>S922X 1.8GHz | 6 cores | ARMv8</p>
+							<p>S922X 1.8 GHz | 6 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -1543,10 +1624,37 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
 						<div class="thumbnail">
+							<img src="images/sbc_images/nanopineo3.jpg" alt="NanoPi NEO3" loading="lazy">
+							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv39"><i class="fa fa-plus"></i></a>
+							<h3>NanoPi NEO3</h3>
+							<p>RK3328 1.5 GHz | 4 cores | ARMv8</p>
+							<div class="mask"></div>
+						</div>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<div class="thumbnail">
+							<img src="images/sbc_images/nanopir2s.jpg" alt="NanoPi R2S" loading="lazy">
+							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv40"><i class="fa fa-plus"></i></a>
+							<h3>NanoPi R2S</h3>
+							<p>RK3328 1.5 GHz | 4 cores | ARMv8</p>
+							<div class="mask"></div>
+						</div>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<div class="thumbnail">
 							<img src="images/sbc_images/nanopik1plus.jpg" alt="NanoPi K1 Plus" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv24"><i class="fa fa-plus"></i></a>
 							<h3>NanoPi K1 Plus</h3>
 							<p>H5 1.4 GHz | 4 cores | ARMv8</p>
+							<div class="mask"></div>
+						</div>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<div class="thumbnail">
+							<img src="images/sbc_images/nanopik2.jpg" alt="NanoPi K2" loading="lazy">
+							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv41"><i class="fa fa-plus"></i></a>
+							<h3>NanoPi K2</h3>
+							<p>S905 1.5 GHz | 4 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
 					</div>
