--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
 				<div id="slidingdiv41" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>NanoPi K2</h3>
+							<h3>NanoPi K2 (beta)</h3>
 							<span class="show_hide close"><i class="fa fa-times"></i></span>
 						</div>
 					</div>
@@ -1332,7 +1332,7 @@
 									<div><span>NET:</span>Gbit Ethernet, WiFi, Bluetooth</div>
 									<div><span>Storage:</span>eMMC socket</div>
 									<br>
-									<div><a href="downloads/images/DietPi_NanoPiK2-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
+									<div><a href="downloads/images/testing/DietPi_NanoPiK2-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_install/#how-to-install-dietpi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
 								<p>A well featured SBC with the SoC that one might know from Odroid C2</p>
