Add Odroid C4, remove "(beta)" from overview grid
+ It should be enough to show beta flag on single SBC download slide, lets keep it clean (and short) on the overview grid.

--- a/index.html
+++ b/index.html
@@ -1342,6 +1342,33 @@
 					</div>
 				</div>
 				<!-- End details for portfolio project 41 -->
+				<!-- Start details for portfolio project 42 -->
+				<div id="slidingdiv41" class="toggleDiv single-project">
+					<div class="row">
+						<div class="col-md-12 project-title clearfix">
+							<h3>Odroid C4 (beta)</h3>
+							<span class="show_hide close"><i class="fa fa-times"></i></span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="project-description">
+								<div class="project-info">
+									<div><span>CPU:</span>Amlogic S905X3 2 GHz | 4 cores | ARMv8</div>
+									<div><span>RAM:</span>2 GiB - 4 GiB DDR4</div>
+									<div><span>NET:</span>Gbit Ethernet</div>
+									<div><span>Storage:</span>eMMC socket</div>
+									<br>
+									<div><a href="downloads/images/testing/DietPi_NanoPiC4-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
+									<div><a href="docs/user-guide_install/#how-to-install-dietpi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
+								</div>
+								<p>Odroid C2 successor with modern upgraded components.</p>
+							</div>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopic4.jpg" alt="NanoPi C4" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- End details for portfolio project 42 -->
 				<div id="portfolio-grid" class="row" style="display:none">
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypi">
 						<div class="thumbnail">
@@ -1367,6 +1394,15 @@
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv3"><i class="fa fa-plus"></i></a>
 							<h3>Odroid C2</h3>
 							<p>S905 1.5 GHz | 4 cores | ARMv8</p>
+							<div class="mask"></div>
+						</div>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix odroid">
+						<div class="thumbnail">
+							<img src="images/sbc_images/odroidc4.jpg" alt="Odroid C4" loading="lazy">
+							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv42"><i class="fa fa-plus"></i></a>
+							<h3>Odroid C4</h3>
+							<p>S905X3 2 GHz | 4 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -1410,7 +1446,7 @@
 						<div class="thumbnail">
 							<img src="images/sbc_images/pineh64.jpg" alt="PINE H64" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv28"><i class="fa fa-plus"></i></a>
-							<h3>PINE H64 (beta)</h3>
+							<h3>PINE H64</h3>
 							<p>H6 1.488 GHz | 4 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
@@ -1455,7 +1491,7 @@
 						<div class="thumbnail">
 							<img src="images/sbc_images/rockpis.jpg" alt="ROCK Pi S" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv35"><i class="fa fa-plus"></i></a>
-							<h3>ROCK Pi S (beta)</h3>
+							<h3>ROCK Pi S</h3>
 							<p>RK3308 | 4 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
@@ -1464,7 +1500,7 @@
 						<div class="thumbnail">
 							<img src="images/sbc_images/fireflyrk3399.jpg" alt="Firefly RK3399" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv25"><i class="fa fa-plus"></i></a>
-							<h3>Firefly RK3399 (beta)</h3>
+							<h3>Firefly RK3399</h3>
 							<p>RK3399 1.8GHz | 6 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
@@ -1608,7 +1644,7 @@
 						<div class="thumbnail">
 							<img src="images/sbc_images/nanopineo2black.jpg" alt="NanoPi NEO2 Black" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv26"><i class="fa fa-plus"></i></a>
-							<h3>NanoPi NEO2 Black (beta)</h3>
+							<h3>NanoPi NEO2 Black</h3>
 							<p>H5 1.2 GHz | 4 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
