--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 		<meta name="google-site-verification" content="nu0tbpn3O5SGEOlI95XwFKygnSpHAtmquRT-3gIgyds">
 		<!-- Bing Webmaster verification -->
 		<meta name="msvalidate.01" content="A45B5113AB90AF6F1D557C17B7C3C178">
-		<!-- Twitter meta tags -->
+		<!-- Twitter meta tags: https://developer.twitter.com/docs/twitter-for-websites/cards -->
+		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@DietPi_">
 		<meta name="twitter:creator" content="@DietPi_">
 		<meta name="twitter:title" content="Lightweight justice for your SBC!">
 		<meta name="twitter:description" content="Optimised | Simplified | For everyone - Easy to install and run optimised software for your SBC - Raspberry Pi, Odroid, PINE64 etc.!">
-		<!-- Open Graph meta tags -->
+		<meta name="twitter:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
+		<!-- Open Graph meta tags: https://developers.facebook.com/docs/sharing/webmasters -->
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:site_name" content="DietPi">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://dietpi.com/">
 		<meta property="og:title" content="Lightweight justice for your SBC!">
 		<meta property="og:description" content="Optimised | Simplified | For everyone - Backed by community, DietPi is a minimal OS image for SBCs - Raspberry Pi, Odroid, PINE64 etc. Install software optimised for you!">
+		<meta property="og:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
 		<!-- Adjust width based on screen size -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Favicon and theme: https://realfavicongenerator.net/ -->
@@ -724,8 +727,12 @@
 									<div><span>USB:</span>3.0</div>
 									<div><span>Storage:</span>eMMC socket</div>
 									<br>
-									<div><a href="downloads/images/DietPi_SparkySBC-ARMv7-Stretch.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
+									<div><a href="downloads/images/DietPi_SparkySBC-ARMv7-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_install/#how-to-install-dietpi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
+									<div>
+										<a href="downloads/images/DietPi_SparkySBC-ARMv7-Buster_AlloGUI.7z"><span>DL Allo GUI image:</span> <i class="fa fa-download"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a>
+										<br>This image has our <a href="phpbb/viewtopic.php?f=8&t=2317" target="_blank" rel="noopener" style="color:#c5ff00; text-decoration:underline;">Allo web GUI</a> and audiophile software pre-installed.
+									</div>
 								</div>
 								<p>The Allo Sparky SBC is unique, in the way its been designed for Audiophile usage at its core. By attaching a Kali re-clocker, Allo Piano DAC and Volt+, this system becomes the ultimate in high end audio quality and playback. If you love your audio and want the very best in audio quality, Sparky SBC coupled with the available audio HATs, is the complete Audiophile SBC solution.</p>
 								<p><i style="color:grey;font-size:80%;">NB: Full GPU features are not currently available for this device, at this time, e.g. Kodi or accelerated desktop. Ideal for server usage.</i></p>
