--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -7,18 +7,21 @@
 		<link rel="canonical" href="https://dietpi.com/dietpi-software.html">
 		<title>DietPi-Software - Lightweight justice for your SBC!</title>
 		<meta name="description" content="Optimised | Simplified | For everyone - Easy to install and run optimised software for your SBC - Raspberry Pi, Odroid, PINE64 etc.!">
-		<!-- Twitter meta tags -->
+		<!-- Twitter meta tags: https://developer.twitter.com/docs/twitter-for-websites/cards -->
+		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@DietPi_">
 		<meta name="twitter:creator" content="@DietPi_">
 		<meta name="twitter:title" content="Lightweight justice for your SBC!">
 		<meta name="twitter:description" content="Optimised | Simplified | For everyone - Easy to install and run optimised software for your SBC - Raspberry Pi, Odroid, PINE64 etc.!">
-		<!-- Open Graph meta tags -->
+		<meta name="twitter:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
+		<!-- Open Graph meta tags: https://developers.facebook.com/docs/sharing/webmasters -->
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:site_name" content="DietPi-Software">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://dietpi.com/dietpi-software.html">
 		<meta property="og:title" content="Lightweight justice for your SBC!">
 		<meta property="og:description" content="Optimised | Simplified | For everyone - Backed by community, DietPi is a minimal OS image for SBCs - Raspberry Pi, Odroid, PINE64 etc. Install software optimised for you!">
+		<meta property="og:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
 		<!-- Adjust width based on screen size -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Favicon and theme: https://realfavicongenerator.net/ -->
