Rename iamge file names for easier browsing and consistency

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -25,11 +25,11 @@
 		<!-- Adjust width based on screen size -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Favicon and theme: https://realfavicongenerator.net/ -->
-		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/dietpi-logo_180x180.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/dietpi-logo_32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/dietpi-logo_16x16.png">
 		<link rel="manifest" href="site.webmanifest">
-		<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="mask-icon" href="images/dietpi-logo_mask_720x720.svg" color="#5bbad5">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
 		<!-- Load css styles -->
@@ -45,7 +45,7 @@
 	<body>
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-xl">
-				<img class="scrollup" src="images/logo.png" alt="Logo" loading="lazy">
+				<img class="scrollup" src="images/dietpi-logo_240x80.png" alt="Logo" loading="lazy">
 				<!-- Navigation button, visible on small resolution -->
 				<button class="navbar-toggler fa fa-bars" data-toggle="collapse" data-target=".navbar-collapse"></button>
 				<!-- Main navigation -->
