--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 		<!-- Adjust width based on screen size -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Favicon and theme: https://realfavicongenerator.net/ -->
-		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/dietpi-logo_180x180.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/dietpi-logo_32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/dietpi-logo_16x16.png">
 		<link rel="manifest" href="site.webmanifest">
-		<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="mask-icon" href="images/dietpi-logo_mask_720x720.svg" color="#5bbad5">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
 		<!-- Load css styles -->
@@ -51,7 +51,7 @@
 	<body>
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-xl">
-				<img class="scrollup" src="images/logo.png" alt="Logo" loading="lazy">
+				<img class="scrollup" src="images/dietpi-logo_240x80.png" alt="Logo" loading="lazy">
 				<!-- Navigation button, visible on small resolution -->
 				<button class="navbar-toggler fa fa-bars" data-toggle="collapse" data-target=".navbar-collapse"></button>
 				<!-- Main navigation -->
@@ -79,7 +79,7 @@
 					<h2>DietPi</h2>
 					<h4>Lightweight justice for your single-board computer!</h4>
 					<p>Optimised | Simplified | For everyone</p>
-					<div class="da-img"><img class="img-fluid" src="images/logo_transparent_360x360.png" width="300" alt="Logo" loading="lazy"></div>
+					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" width="300" alt="Logo" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
 				<!-- Start slide -->
@@ -88,7 +88,7 @@
 					<h4>Highly optimised minimal Debian OS</h4>
 					<p>DietPi is extremely lightweight at its core, with features of low process/memory footprint and DietPi-RAMlog installed by default, to get the maximum performance from your device.</p>
 					<a href="https://docs.google.com/spreadsheets/d/1mDHGZC-H6tU6_O8kuLTG8d4A8Nt7lV1Q7MXTR_6qw30/edit?usp=sharing" class="da-link" target="_blank" rel="noopener">Learn more</a>
-					<div class="da-img"><img class="img-fluid" src="images/feather.png" alt="Feather" loading="lazy"></div>
+					<div class="da-img"><img class="img-fluid" src="images/slider_feather.png" alt="Feather" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
 				<!-- Start slide -->
@@ -97,7 +97,7 @@
 					<h4>Installs and optimises popular software for you</h4>
 					<p>Quickly and easily install popular software "ready to run" and optimised for your system. Gone are the days of reading 5+ page guides, DietPi does everything for you, giving you more time to enjoy the software you require.</p>
 					<a href="dietpi-software.html" class="da-link" target="_blank" rel="noopener">Learn more</a>
-					<div class="da-img"><img class="img-fluid" src="images/software.png" width="320" alt="Software" loading="lazy"></div>
+					<div class="da-img"><img class="img-fluid" src="images/slider_software.png" width="320" alt="Software" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
 				<!-- Start slide -->
@@ -106,7 +106,7 @@
 					<h4>All devices benchmarked (CPU/IO)</h4>
 					<p>Looking to purchase a new SBC device? Curious to see which devices perform best? With thanks to our end users, you can now view and compare DietPi-Benchmark results for all devices.</p>
 					<a href="survey/#benchmark" class="da-link" target="_blank" rel="noopener">Learn more</a>
-					<div class="da-img"><img class="img-fluid" src="images/logo_transparent_360x360.png" width="300" alt="Logo" loading="lazy"></div>
+					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" width="300" alt="Logo" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
 				<!-- Start slide navigation arrows -->
@@ -132,21 +132,21 @@
 				<div class="row">
 					<div class="col-sm-4 service">
 						<a href="https://docs.google.com/spreadsheets/d/1mDHGZC-H6tU6_O8kuLTG8d4A8Nt7lV1Q7MXTR_6qw30/edit?usp=sharing" target="_blank" rel="noopener">
-							<img class="circle-border zoom-in" src="images/optimized.png" alt="Speed" loading="lazy">
+							<img class="circle-border zoom-in" src="images/dietpi-optimised.png" alt="Speed" loading="lazy">
 							<h3>Truly Optimised</h3>
 						</a>
 						<p>DietPi is an extremely lightweight Debian OS, highly optimised for minimal CPU and RAM resource usage, ensuring your SBC always runs at its maximum potential.</p>
 					</div>
 					<div class="col-sm-4 service">
 						<a href="phpbb/viewtopic.php?p=1061#p1061" target="_blank" rel="noopener">
-							<img class="circle-border zoom-in" src="images/interface.png" alt="Whiptail" loading="lazy">
+							<img class="circle-border zoom-in" src="images/dietpi-interface.png" alt="Whiptail" loading="lazy">
 							<h3>Simple interface</h3>
 						</a>
 						<p>DietPi programs use lightweight Whiptail menus. Spend less time staring at the command line, more time enjoying your Pi.</p>
 					</div>
 					<div class="col-sm-4 service">
 						<a href="dietpi-software.html" target="_blank" rel="noopener">
-							<img class="circle-border zoom-in" src="images/software2.png" alt="Software" loading="lazy">
+							<img class="circle-border zoom-in" src="images/dietpi-software.png" alt="Software" loading="lazy">
 							<h3>DietPi-Software</h3>
 						</a>
 						<p>Quickly and easily install popular software "ready to run" and optimised for your system. Only the software you need is installed.</p>
@@ -169,7 +169,7 @@
 					</div>
 					<div class="col-sm-4 service">
 						<a href="phpbb/viewtopic.php?p=68#p68" target="_blank" rel="noopener">
-							<img class="circle-border zoom-in" src="images/logging-choices.png" alt="Log" loading="lazy">
+							<img class="circle-border zoom-in" src="images/dietpi-logging.png" alt="Logging" loading="lazy">
 							<h3>Logging System Choices</h3>
 						</a>
 						<p>You decide how much logging you need. Get a performance boost with DietPi-RAMlog, or, rsyslog and logrotate for log critical servers.</p>
@@ -178,13 +178,13 @@
 				<div class="row">
 					<div class="col-sm-4 service">
 						<a href="phpbb/viewtopic.php?p=279#p279" target="_blank" rel="noopener">
-							<img class="circle-border zoom-in" src="images/process-tool.png" alt="CPU" loading="lazy">
+							<img class="circle-border zoom-in" src="images/dietpi-services.png" alt="CPU" loading="lazy">
 							<h3>DietPi-Services Control</h3>
 						</a>
 						<p>Control which installed software has higher or lower priority levels: nice, affinity, policy scheduler and more.</p>
 					</div>
 					<div class="col-sm-4 service">
-						<img class="circle-border zoom-in" src="images/update.png" alt="Update" loading="lazy">
+						<img class="circle-border zoom-in" src="images/dietpi-update.png" alt="Update" loading="lazy">
 						<h3>DietPi-Update System</h3>
 						<p>DietPi automatically checks for updates and informs you when they are available. Update instantly, without having to write a new image.</p>
 					</div>
