--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -25,13 +25,13 @@
 		<!-- Adjust width based on screen size -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Favicon and theme: https://realfavicongenerator.net/ -->
-		<link rel="apple-touch-icon" sizes="180x180" href="images/dietpi-logo_180x180.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/dietpi-logo_32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="images/dietpi-logo_16x16.png">
 		<link rel="manifest" href="site.webmanifest">
-		<link rel="mask-icon" href="images/dietpi-logo_mask_720x720.svg" color="#5bbad5">
+		<link rel="mask-icon" href="images/dietpi-logo_mask_720x720.svg" color="#c5ff00">
 		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#ffffff">
+		<meta name="theme-color" content="#000000">
 		<!-- Load css styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/fonts.min.css">
