update the install links

--- a/index.html
+++ b/index.html
@@ -647,8 +647,13 @@
 									<div><span>CPU:</span>Host system dependent</div>
 									<div><span>RAM:</span>1 GiB | Can be changed</div>
 									<br>
-									<div><a href="downloads/images/DietPi_VirtualBox-x86_64-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
-									<div><a href="docs/user-guide_install/#how-to-install-dietpi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
+									<div>
+										<a href="downloads/images/DietPi_VirtualBox-x86_64-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a>
+									</div>
+									<div>
+										<a href="docs/user-guide_install_VirtualBox/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a>
+										<br>NEW install documentation is now available !
+									</div>
 								</div>
 								<p>The VirtualBox virtual machine is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience.</p>
 							</div>
@@ -1094,7 +1099,10 @@
 										<a href="downloads/images/DietPi_NativePC-UEFI-x86_64-Buster.7z"><span>Installer Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a>
 										<br>Flash to e.g. a USB stick to boot and install DietPi to internal drive.
 									</div>
-									<div><a href="docs/user-guide_install/#how-to-install-dietpi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
+									<div>
+										<a href="docs/user-guide_install_uefi" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a>
+										<br>NEW install documentation is now available !
+									</div>
 								</div>
 								<p>The Native PC is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience. This image is for motherboards with UEFI boot support and onboard EMMC (eg: Z83-II, Beelink AP32 and other Intel NUC/SBC devices with onboard eMMC).</p>
 							</div>
