--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
 	<body>
 		<h1>404 Not Found</h1>
 		<h2>The requested URL is not available. You might find what you are looking for at one of the follwing sites:</h2>
-		<a href="/docs/">
+		<a href="/">
 			<img src="/images/dietpi-logo_180x180.png" alt="Home" loading="lazy">
 			<h3>DietPi Website</h3>
 		</a>
