--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -32,11 +32,11 @@
 		<link rel="mask-icon" href="images/dietpi-logo_mask_720x720.svg" color="#c5ff00">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#000000">
-		<!-- Load css styles -->
+		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/fonts.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.min.css">
-		<!-- Include javascript -->
+		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js"></script>
 		<script defer src="js/mixitup.min.js"></script>
@@ -401,7 +401,7 @@
 									<span>Cons:</span>Lacks library features, offered by others (e.g.: LMS/Mopidy/O!MPD etc).
 								</div>
 							</div>
-							<p>A lightweight, bare-bones, no frills Hi-Fi music player with a web based interface. Select or search for a song and play it, simple and effective. If you are seeking the highest raw performance audio playback, without bloatware and additional processing, YMPD is highly recommended. YMPD is a front end for MPD.</p>
+							<p>A lightweight, bare-bones, no frills HiFi music player with a web based interface. Select or search for a song and play it, simple and effective. If you are seeking the highest raw performance audio playback, without bloatware and additional processing, YMPD is highly recommended. YMPD is a front end for MPD.</p>
 						</div>
 					</div>
 				</div>
@@ -1052,7 +1052,7 @@
 								</div>
 							</div>
 							<p>You can access and manage SABnzbd from any device with a web browser, including iOS and Android phones and tablets.</p>
-							<p>Apps like Sonarr, Sickrage, Radarr, Headphones and more can integrate with SABnzbd and automate your download process. SABnzbd can also read and process RSS feeds, activate custom scripts and notify you.</p>
+							<p>Apps like Sonarr, Medusa, Radarr, Headphones and more can integrate with SABnzbd and automate your download process. SABnzbd can also read and process RSS feeds, activate custom scripts and notify you.</p>
 						</div>
 					</div>
 				</div>
@@ -1658,7 +1658,7 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								</div>
 								<div>
 									<br>
-									<span>Pros:</span>Lightweight, due to no web server pre-reqs
+									<span>Pros:</span>Lightweight install, due to no web server requirement
 								</div>
 								<div>
 									<span>Cons:</span>Lacks popularity, compared to ownCloud/Nextcloud
@@ -1815,7 +1815,7 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								</div>
 							</div>
 							<p>A free decentralized peer to peer market server for all. No fees. Using Bitcoin.
-Oldschool: Think Napster, but for buying and selling stuff using your BitCoins </p>
+Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins </p>
 						</div>
 					</div>
 				</div>
@@ -2116,13 +2116,13 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>TBA
 								</div>
 							</div>
-							<p>Platform with iOs and Android apps to control Arduino, ESP8266, Raspberry Pi and similar microcontroller boards over the Internet.</p>
+							<p>Platform with iOS and Android apps to control Arduino, ESP8266, Raspberry Pi and similar microcontroller boards over the Internet.</p>
 						</div>
 					</div>
 				</div>
 				<!-- Start details for portfolio project 79 -->
 				<div id="slidingdiv79" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/pispc_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/pispc_0.jpg" alt="AudioPhonics Pi-SPC" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/pispc_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/pispc_0.jpg" alt="Audiophonics Pi-SPC" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -2141,7 +2141,7 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>TBA
 								</div>
 							</div>
-							<p>Power control module for Raspberry Pi which allows you to physically power on/off the system, without the need to run "poweroff".</p>
+							<p>Power control module for Raspberry Pi which allows you to physically power on/off the system, without the need to run <code>poweroff</code>.</p>
 						</div>
 					</div>
 				</div>
@@ -2166,8 +2166,8 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>TBA
 								</div>
 							</div>
-							<p>InfluxDB is a database optimized to save time based data as logs or data from a sensor. The main interface to the database for management and data transfert is http requests that are handled directly by influxdb service (default port being 8086).</p>
-							<p>The data can be nicely viewed with Grafana. This installation and documentation was possible, thanks to @marcobrianza</p>
+							<p>InfluxDB is a database optimised to save time based data as logs or data from a sensor. The main interface to the database for management and data transfer is HTTP requests that are handled directly by the InfluxDB system service (default port being 8086).</p>
+							<p>The data can be nicely viewed with Grafana. This installation and documentation was possible, thanks to <a href="https://github.com/marcobrianza" target="_blank" rel="noopener" style="color:#c5ff00;">@marcobrianza</a></p>
 						</div>
 					</div>
 				</div>
@@ -2193,7 +2193,7 @@ Perfect for users requiring anonymity and privacy.</p>
 								</div>
 							</div>
 							<p>The open platform for beautiful analytics and monitoring.</p>
-							<p>This installation and documentation was possible, thanks to @marcobrianza</p>
+							<p>This installation and documentation was possible, thanks to <a href="https://github.com/marcobrianza" target="_blank" rel="noopener" style="color:#c5ff00;">@marcobrianza</a></p>
 						</div>
 					</div>
 				</div>
@@ -2268,7 +2268,7 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>None
 								</div>
 							</div>
-							<p>Turn your Odroid Cloudshell, Odroid 3.5 LCD Touchscreen Shield, Waveshare32, or monitor into a dedicated lightweight system stats display.</p>
+							<p>Turn your Odroid CloudShell, Odroid 3.5 LCD Touchscreen Shield, Waveshare32, or monitor into a dedicated lightweight system stats display.</p>
 						</div>
 					</div>
 				</div>
@@ -2469,7 +2469,7 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>Not as light as Lighttpd
 								</div>
 							</div>
-							<p>Host your own website! Nginx is the middle ground between performance (lighttpd) and bulk (apache2), whilst keeping many features available in Apache2. Ideal for general use, regardless of expected web traffic load.</p>
+							<p>Host your own website! Nginx is the middle ground between performance (Lighttpd) and bulk (Apache2), whilst keeping many features available in Apache2. Ideal for general use, regardless of expected web traffic load.</p>
 							<p>NB: DietPi will automatically install a web server stack if any software requires it. For most users, you should never need to manually install one. By default this is Lighttpd, however, you can change this in the DietPi-Software menu.</p>
 						</div>
 					</div>
@@ -2571,7 +2571,7 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>TBA
 								</div>
 							</div>
-							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for Web ARchive) file, and simply drop it in the deploy directory in Tomcat. </p>
+							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for <code>W</code>eb <code>AR</code>chive) file, and simply drop it in the deploy directory in Tomcat. </p>
 						</div>
 					</div>
 				</div>
@@ -2615,7 +2615,7 @@ Perfect for users requiring anonymity and privacy.</p>
 								</div>
 								<div>
 									<br>
-									<span>Pros:</span>One the fastest fileservers we have available
+									<span>Pros:</span>One the fastest files ervers we have available
 								</div>
 								<div>
 									<span>Cons:</span>May not meet security needs. However, ideal for home LAN in most cases.
@@ -2746,17 +2746,17 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>TBA
 								</div>
 							</div>
-							<p>OpenVPN installer & management tool. It also has a command pivpn which allows for simple creation of additional user OpenVPN profiles.</p>
+							<p>OpenVPN installer & management tool. It also has a command <code>pivpn</code> which allows for simple creation of additional user OpenVPN profiles.</p>
 						</div>
 					</div>
 				</div>
 				<!-- Start details for portfolio project 104 -->
 				<div id="slidingdiv104" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/cloudprint_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/cloudprint_0.jpg" alt="Cloudprint" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/cloudprint_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/cloudprint_0.jpg" alt="Cloud Print" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Cloudprint</h3>
+								<h3>Cloud Print</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
@@ -2846,7 +2846,7 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>None
 								</div>
 							</div>
-							<p>Use your NoIp account and website URL address to always have it pointing to your DietPi System. Essential if your hosting a website.</p>
+							<p>Use your No-IP account and website URL address to always have it pointing to your DietPi System. Essential if your hosting a website.</p>
 						</div>
 					</div>
 				</div>
@@ -3068,7 +3068,7 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Pros:</span>Simple, slick web interface for RSS.
 								</div>
 								<div>
-									<span>Cons:</span>Web-server pre-req.
+									<span>Cons:</span>Web server required.
 								</div>
 							</div>
 							<p>A self-hosted RSS feed aggregator.</p>
@@ -3096,7 +3096,7 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>None
 								</div>
 							</div>
-							<p>A lightweight, bare-bones, no frills Hi-Fi music player with a web based interface. myMPD is a front end for MPD, and a recent fork of YMPD. myMPD provides a reworked UI based on Bootstrap 4, and, a modernized backend including many new features, whilst having the same small footprint as ympd.</p>
+							<p>A lightweight, bare-bones, no frills HiFi music player with a web based interface. myMPD is a front end for MPD, and a recent fork of YMPD. myMPD provides a reworked UI based on Bootstrap 4, and, a modernized backend including many new features, whilst having the same small footprint as ympd.</p>
 						</div>
 					</div>
 				</div>
@@ -3472,7 +3472,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/transmission_0.jpg" alt="project 31" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv31"><i class="fa fa-plus"></i></a>
 							<h3>Transmission</h3>
-							<p>Lightweight BT server & web interface</p>
+							<p>Lightweight BitTorrent server & web interface</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -3481,7 +3481,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/deluge_0.jpg" alt="project 32" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv32"><i class="fa fa-plus"></i></a>
 							<h3>Deluge</h3>
-							<p>BT server & web interface</p>
+							<p>BitTorrent server & web interface</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -3490,7 +3490,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/qbittorrent_0.jpg" alt="project 33" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv33"><i class="fa fa-plus"></i></a>
 							<h3>qBittorrent</h3>
-							<p>BT server & web interface</p>
+							<p>BitTorrent server & web interface</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -3499,7 +3499,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/rtorrent_0.jpg" alt="project 34" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv34"><i class="fa fa-plus"></i></a>
 							<h3>rTorrent</h3>
-							<p>BT server & web interface</p>
+							<p>BitTorrent server & web interface</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -3805,7 +3805,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/openbazaar_0.jpg" alt="project 66" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv66"><i class="fa fa-plus"></i></a>
 							<h3>OpenBazaar</h3>
-							<p>Market server for BitCoin</p>
+							<p>Market server for Bitcoin</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -3966,7 +3966,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/dietpi-cloudshell_0.jpg" alt="project 84" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv84"><i class="fa fa-plus"></i></a>
-							<h3>DietPi-Cloudshell</h3>
+							<h3>DietPi-CloudShell</h3>
 							<p>Lightweight system stats</p>
 							<div class="mask"></div>
 						</div>
@@ -4030,7 +4030,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/apache2_0.jpg" alt="project 91" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv91"><i class="fa fa-plus"></i></a>
 							<h3>Apache2</h3>
-							<p>LAMP / LAAP / LASP</p>
+							<p>LAMP / LASP</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -4039,7 +4039,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/nginx_0.jpg" alt="project 92" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv92"><i class="fa fa-plus"></i></a>
 							<h3>Nginx</h3>
-							<p>LEMP / LESP / LEAP</p>
+							<p>LEMP / LESP</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -4048,7 +4048,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/lighttpd_0.jpg" alt="project 93" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv93"><i class="fa fa-plus"></i></a>
 							<h3>Lighttpd</h3>
-							<p>LLMP / LLSP / LLAP</p>
+							<p>LLMP / LLSP</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -4155,7 +4155,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/cloudprint_0.jpg" alt="project 104" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv104"><i class="fa fa-plus"></i></a>
-							<h3>CloudPrint</h3>
+							<h3>Cloud Print</h3>
 							<p>CUPS & Google cloud printing</p>
 							<div class="mask"></div>
 						</div>
@@ -4219,7 +4219,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/fulllogging_0.jpg" alt="project 111" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv111"><i class="fa fa-plus"></i></a>
 							<h3>Full Logging</h3>
-							<p>Rsyslog & LogRotate</p>
+							<p>Rsyslog & Logrotate</p>
 							<div class="mask"></div>
 						</div>
 					</div>
@@ -4260,8 +4260,8 @@ Perfect for users requiring anonymity and privacy.</p>
 			</div>
 		</div>
 		<!-- Footer section end -->
-		<!-- ScrollUp button start -->
+		<!-- Scroll up button start -->
 		<a class="scrollup fa fa-chevron-up" href="#"></a>
-		<!-- ScrollUp button end -->
+		<!-- Scroll up button end -->
 	</body>
 </html>
